--- a/CSS/recados.css
+++ b/CSS/recados.css
@@ -6,9 +6,10 @@
   font-family: "Poppins", sans-serif;
 }
 body {
-  width: 99vw;
-  position: absolute;
-  height: 100%;
+  background-image: url(../IMG/wallpaperflare.com_wallpaper.jpg);
+  
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
